# MultiAgent-AICoder

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.frontend  Dockerfile.phase1-agent  Dockerfile.phase2-agent  Dockerfile.phase3-agent  Dockerfile.phase4-agent  Dockerfile.phase5-agent  Dockerfile.phase6-agent  Dockerfile.worker  IMPLEMENTATION_SUMMARY.md  MULTI_AGENT_SYSTEM.md  Makefile  QUICK_START.md  README.md  TESTING_CHECKLIST.md  build-images.sh  deploy-k8s.sh  docker-compose.prod.yml  docker-compose.yml  index.html  setup_and_start.sh  start.bat  start.sh  🎉_IMPLEMENTATION_COMPLETE.md
.github/workflows/: deploy-docs.yml
backend/: .dockerignore  Dockerfile  config.example.py  config.py  constants.py  main.py  main_enhanced.py  pyproject.toml  requirements.txt  test_token_tracking.py  worker.py
backend/agents/: __init__.py  advanced_orchestrator.py  architect_agent.py  base_agent.py  batch_code_generator_agent.py  code_generator_agent.py  code_reviewer_agent.py  coder_agent.py  execution_agent.py  feature_planner_agent.py  modification_analyzer_agent.py  orchestrator.py  planner_agent.py  reviewer_agent.py  simple_orchestrator.py  streaming_wrapper.py  test_generator_agent.py  tester_agent.py  testing_agent.py  validation_pipeline_agent.py
backend/agents/conversation/: __init__.py  code_modifier_agent.py  conversation_orchestrator.py  feature_planner_agent.py
backend/agents/phase1_discovery/: __init__.py  requirements_analyst_agent.py  requirements_analyst_interactive.py  research_agent.py  tech_stack_decision_agent.py
backend/agents/phase2_design/: __init__.py  architect_agent.py  component_designer_agent.py  database_designer_agent.py  module_designer_agent.py  ui_designer_agent.py
backend/agents/phase3_implementation/: __init__.py  docker_generator_agent.py  nextjs_coder_agent.py
backend/agents/phase4_qa/: __init__.py  debugger_agent.py  security_auditor_agent.py
backend/agents/phase5_validation/: __init__.py  executor_agent.py
backend/agents/phase6_monitoring/: __init__.py  monitor_agent.py
backend/agents/routing/: __init__.py  router_agent.py
backend/agents/workers/: __init__.py  phase1_worker.py  phase2_worker.py  phase3_worker.py  phase4_worker.py  phase5_worker.py  phase6_worker.py
backend/api/: chat_routes.py  enhanced_routes.py  health_routes.py  routes.py  streaming_routes.py
backend/mcp/: __init__.py  server.py
backend/models/: __init__.py  clarification_schemas.py  conversation_schemas.py  enhanced_schemas.py  schemas.py  ui_schemas.py
backend/services/: __init__.py  execution_service.py
backend/utils/: __init__.py  cache.py  decorators.py  gemini_client.py  json_helpers.py  llm_tracker.py  openai_client.py  validators.py
docs/: API.md  ARCHITECTURE.md  ARCHITECTURE_VISUAL.md  ENHANCED_ARCHITECTURE.md  EXAMPLES.md  NO_CODE_INTERFACE.md  QUICK_START.md
frontend/: Dockerfile  package-lock.json  package.json  postcss.config.js  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.tsx  ChatApp.tsx  index.css  index.tsx
frontend/src/components/: LLMUsageTracker.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
nginx/: api-gateway.conf  frontend.conf  nginx.conf
