[project]
name = "ai-coder"
version = "2.0.0"
description = "Multi-agent code generation system with clean architecture"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "AI Coder Team" }
]
license = { text = "MIT" }

dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "pydantic==2.11.0",
    "pydantic-settings==2.7.0",
    "google-generativeai==0.3.2",
    "mcp==1.21.1",
    "websockets==14.0",
    "aiohttp==3.11.11",
    "asyncio==3.4.3",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.17",
    "jinja2==3.1.4",
    "python-jose[cryptography]==3.3.0",
    "structlog==24.4.0",
    "psutil==6.1.0",
    "celery[redis]==5.4.0",
    "redis==5.2.1",
    "dependency-injector==4.41.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.23.0",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "black==24.10.0",
    "ruff==0.1.9",
    "mypy==1.7.1",
    "pre-commit==3.6.0",
]

test = [
    "pytest==8.3.4",
    "pytest-asyncio==0.23.0",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "httpx==0.25.2",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Ignore unused imports in __init__.py

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "google.generativeai.*",
    "mcp.*",
    "celery.*",
    "redis.*",
    "dependency_injector.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

